--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "mocha": "^10.2.0"
+    "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "name": "b3-c2-dev-tu-leclerc-colin-fournier-florian",
   "description": "Calculatrice pour le cours de test unitaire de Mr. Rida",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GeneralPlayfix/b3-c2-dev-tu-leclerc-colin-fournier-florian.git"
   },
-  "author": "Leclerc Colin Fournier Florian",
+  "author": "Leclerc Colin Fournier Florian",   
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/GeneralPlayfix/b3-c2-dev-tu-leclerc-colin-fournier-florian/issues"
   },
-  "homepage": "https://github.com/GeneralPlayfix/b3-c2-dev-tu-leclerc-colin-fournier-florian#readme"
+  "homepage": "https://github.com/GeneralPlayfix/b3-c2-dev-tu-leclerc-colin-fournier-florian#readme",
+  "devDependencies": {
+    "mocha": "^10.2.0"
+  }
 }
